<?xml version="1.0"?>
<package format="2">
  <name>motors</name>
  <version>0.0.0</version>
  <description>The motors package</description>

  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
  <maintainer email="alessio.deluca.iic96d@gmail.com">Alessio De Luca</maintainer>
  <maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
  <license>BSD</license>
  <author email="roncapat@gmail.com">Patrick Roncagliolo</author>
  <author email="alessio.deluca.iic96d@gmail.com">Alessio De Luca</author>
  <author email="marco.lapolla5@gmail.com">Marco Lapolla</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
