<?xml version="1.0"?>
<package format="2">
  <name>motors</name>
  <version>0.0.0</version>
  <description>The RaspBioloid motors package</description>

  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
  <maintainer email="alessio.deluca.iic96d@gmail.com">Alessio De Luca</maintainer>
  <maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
  <license>GPLv3</license>
  <author email="roncapat@gmail.com">Patrick Roncagliolo</author>
  <author email="alessio.deluca.iic96d@gmail.com">Alessio De Luca</author>
  <author email="marco.lapolla5@gmail.com">Marco Lapolla</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>motors_msgs</build_depend>
  <build_depend>motors_srvs</build_depend>

  <exec_depend>rospy</exec_depend>

</package>
